--- a/src/components/layout/header/template.pug
+++ b/src/components/layout/header/template.pug
@@ -1,10 +1,10 @@
 header.o-main-header.p-init.w-100
   nav.d-row-flex.d-flex-spacebet.h-100.pt-05.pr-1.pl-1
-    a(href="./flux.html", title="Flux").o-inlinebox.h-100
+    router-link(to="./flux.html", title="Flux").o-inlinebox.h-100
       svg(viewBox="0 0 304.29 250").o-svgh-ico
         use(xlink:href="#ico-puzzle")
           
-    a(href="./profil.html", title="Profil").p-rel.o-inlinebox.h-100
+    router-link(to="./profil.html", title="Profil").p-rel.o-inlinebox.h-100
       //- zone de notif --
       span.o-notif.p-abs.brad-100
       //- fin de zone de notif --
