--- a/src/components/flux/template.pug
+++ b/src/components/flux/template.pug
@@ -3,61 +3,6 @@ main.o-main.o-grid.pl-1.pr-1.pb-1.d-flex.p-center-auto
   .grid-col.grid-col--2.d-flex-eq
   .grid-col.grid-col--3.d-flex-eq
     
-    
-  article.o-tile.o-tile-grided.brad-4.shadbox-light
-    a(href="#").no-link
-      img(src="@/assets/img/brands/imaginarium/imaginarium-pic.jpg", alt="").full-width
-      .o-tile__info
-        img(src="@/assets/img/brands/imaginarium/logo@2x.png" alt="logo").o-tile__logo.b-10.brad-100
-        h2.o-tile__name.p-hcenter-rel.f-cap.f-st Nike
-        h3.o-tile__desc.p-hcenter-rel.f-grey.f-cap.f-light.f-stl Bonjour
-             
-        ul.d-row-flex.no-list.pt-1.pb-1
-          li.p-hcenter-rel.d-flex-eq.f-light.f-si 
-            svg(viewBox="0 0 62.37 62.37").o-tile__ico
-              use(xlink:href="#ico-cible")
-            span tut zr
-          li.p-hcenter-rel.d-flex-eq.pl-1.pr-1.f-light.f-si 
-            svg(viewBox="0 0 64.22 62.67").o-tile__ico
-              use(xlink:href="#ico-gift")
-            span cadeau
-              
-          li.p-hcenter-rel.d-flex-eq.f-light.f-si 
-            svg(viewBox="0 0 60.09 60.09").o-tile__ico
-              use(xlink:href="#ico-clock")
-            div
-              div du 01/12/3987
-              div au 01/12/3987
-              
-      a(href="#").o-tile__vote.brad-100
-        svg(viewBox="0 0 42 42").o-svgw-ico
-          use(xlink:href="#ico-vote")
-            
-  article.o-tile.o-tile-grided.brad-4.shadbox-light
-    a(href="#").no-link
-      img(src="@/assets/img/brands/imaginarium/imaginarium-pic.jpg", alt="").full-width
-      .o-tile__info
-        img(src="@/assets/img/brands/imaginarium/logo@2x.png" alt="logo").o-tile__logo.b-10.brad-100
-        h2.o-tile__name.p-hcenter-rel.f-cap.f-st Nike
-        h3.o-tile__desc.p-hcenter-rel.f-grey.f-cap.f-light.f-stl Bonjour
-                       
-        ul.d-row-flex.no-list.pt-1.pb-1
-          li.p-hcenter-rel.d-flex-eq.f-light.f-si 
-            svg(viewBox="0 0 62.37 62.37").o-tile__ico
-              use(xlink:href="#ico-cible")
-            span tut zr
-          li.p-hcenter-rel.d-flex-eq.pl-1.pr-1.f-light.f-si 
-            svg(viewBox="0 0 64.22 62.67").o-tile__ico
-              use(xlink:href="#ico-gift")
-            span cadeau
-                        
-          li.p-hcenter-rel.d-flex-eq.f-light.f-si 
-            svg(viewBox="0 0 60.09 60.09").o-tile__ico
-              use(xlink:href="#ico-clock")
-            div
-              div du 01/12/3987
-              div au 01/12/3987
-                        
-      a(href="#").o-tile__vote.brad-100
-        svg(viewBox="0 0 42 42").o-svgw-ico
-          use(xlink:href="#ico-vote")
+  div(v-for="contest in contests" :key="contest.id")
+    flux-tile(:data="contest" v-if="!contest.pictures")
+    flux-podium(:data="contest" v-else="contest.pictures")
