--- a/src/components/flux/tile/template.pug
+++ b/src/components/flux/tile/template.pug
@@ -42,3 +42,9 @@ article.o-tile.o-tile-grided.brad-4.shadbox-light
             div
               div(:class="{'c-grad-yo': closeSoon}") du {{ getStartDate }}
               div(:class="{'c-grad-yo f-stl': closeSoon}") au {{ getEndDate }}
+              
+  //- OPEN -> bouton de vote
+  div(v-if="!data.closed")     
+    a(href="/vote.html").o-tile__vote.brad-100
+      svg(viewBox="0 0 42 42").o-svgw-ico
+                    use(xlink:href="#ico-vote") 
