--- a/src/components/flux/podium/template.pug
+++ b/src/components/flux/podium/template.pug
@@ -1,5 +1,5 @@
 article.o-tile.o-tile-grided.brad-4.shadbox-light
-  .o-tile__infos--long.d-row-flex.d-flex-spacebet.d-flex-vm.p-05.pl-1.pr-1
+  .d-row-flex.d-flex-spacebet.d-flex-vm.p-05.pl-1.pr-1
     a(href="#").no-link.d-row-flex.d-flex-spacebet.d-flex-vm
       img(:src="data.logo" alt="logo").o-tile__logo--long.b-1.brad-100
       span.va-mid
@@ -14,5 +14,5 @@ article.o-tile.o-tile-grided.brad-4.shadbox-light
       img(:src="pic", alt="")
       .o-ico-sprite
 
-  .o-tile__infos--long.p-1.pt-025.pb-025.f-right
+  .p-1.pt-025.pb-025.f-right
     span.f-light.f-lgrey.f-sxs {{ data.gifts }}
