--- a/src/assets/style/style.less
+++ b/src/assets/style/style.less
@@ -6,13 +6,13 @@
 
 // components
 // @import "./components/header";
-@import "./components/footer";
-@import "./components/tile";
+// @import "./components/footer";
+// @import "./components/tile";
 @import "./components/popin";
 
 // page
 @import "./pages/connect";
-@import "./pages/flux";
+// @import "./pages/flux";
 @import "./pages/profil";
 @import "./pages/contest";
 @import "./pages/vote";
