Retirer div vide à l'entrée

--- a/src/components/flux/podium/template.pug
+++ b/src/components/flux/podium/template.pug
@@ -1,14 +1,14 @@
-article.o-tile.o-tile-grided.brad-4.shadbox-light
+div  
   .d-row-flex.d-flex-spacebet.d-flex-vm.p-05.pl-1.pr-1
     a(href="#").no-link.d-row-flex.d-flex-spacebet.d-flex-vm
       img(:src="data.logo" alt="logo").o-tile__logo--long.b-1.brad-100
       span.va-mid
         span.pl-1.f-stm.pr-05.f-bold {{ data.brand }}
         span.f-cap.f-stl.f-lgrey.f-reg {{ data.desc }}
-      
+        
     a(href="#").no-link
       span.o-more
-      
+        
   .o-tile__pictures
     a(href="image.html" v-for="pic in data.pictures").p-rel
       img(:src="pic", alt="")
