Ajouts des composants users (profile/notification/content)

--- a/src/assets/style/style.less
+++ b/src/assets/style/style.less
@@ -13,7 +13,7 @@
 // page
 @import "./pages/connect";
 // @import "./pages/flux";
-@import "./pages/profil";
+// @import "./pages/profil";
 @import "./pages/contest";
 @import "./pages/vote";
 
