Reformater date dans contest

--- a/src/components/contest/template.pug
+++ b/src/components/contest/template.pug
@@ -34,8 +34,8 @@ main.o-main.c-backbg.pb-1
             svg(viewBox="0 0 60.09 60.09" ).o-tile__ico.o-tile__ico--large
               use(xlink:href="#ico-clock")
             div
-              div {{ contest.dateStart }}
-              div {{ contest.dateEnd }}
+              div {{ getStartDate }}
+              div {{ getEndDate }}
             
       div.d-col-flex.mt-2.pr-4.pl-4
         a(href="contest-rules.html").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Participer
