Ajout du composant layerPopin

--- a/src/components/contest/template.pug
+++ b/src/components/contest/template.pug
@@ -47,3 +47,6 @@ main.o-main.c-backbg.pb-1
       div.pl-4.pr-4.mt-4
         h3.p-rel.sep-bef.f-stl.f-reg Règlement complet
         p.pt-1.f-grey.f-stl {{ contest.rules }}
+        
+  layer-popin
+    p bonjour
