--- a/src/components/contest/template.pug
+++ b/src/components/contest/template.pug
@@ -38,7 +38,7 @@ main.o-main.c-backbg.pb-1
               div {{ getEndDate }}
             
       div.d-col-flex.mt-2.pr-4.pl-4
-        a(href="contest-rules.html").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Participer
+        //- a(@click="'displayPopin' = true").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Participer
         a(href="/vote.html").no-link.f-center.shadbox-light.pt-1.pb-1.mt-1.brad-4 
           svg(viewBox="0 0 42 42").mt-neg025.o-svgh-ico.o-svg-btn.mr-05.va-mid
             use(xlink:href="#ico-vote")
@@ -46,7 +46,7 @@ main.o-main.c-backbg.pb-1
         
       div.pl-4.pr-4.mt-4
         h3.p-rel.sep-bef.f-stl.f-reg Règlement complet
-        p.pt-1.f-grey.f-stl {{ contest.rules }}
+        p(v-html="contest.rules").pt-1.f-grey.f-stl
         
-  layer-popin
-    p bonjour
+  layer-popin(v-if="displayPopin")
+    validation-rules
