--- a/src/components/contest/validation-rules/template.pug
+++ b/src/components/contest/validation-rules/template.pug
@@ -2,14 +2,14 @@ div
   .o-tile__infos--long.pl-2.pr-2.pt-2.pb-05.sep-aft
     .p-rel.d-row-flex.d-flex-spacebet.d-flex-vm.w-100.sep-aft
       .d-row-flex.d-flex-spacebet.d-flex-vm
-        //- img(src=brand.logo alt="logo").o-tile__logo--long.b-1.brad-100
+        img(:src="logo" alt="logo").o-tile__logo--long.b-1.brad-100
         span.va-mid.pl-1
-          //- span.d-block.f-stm.f-bold= brand.brand
-          //- span.d-block.f-cap.f-stl.f-lgrey.f-reg= brand.desc
+          span.d-block.f-stm.f-bold {{ brand }}
+          span.d-block.f-cap.f-stl.f-lgrey.f-reg {{ desc }}
         
   .o-popin-ovrflw.pl-2.pr-2.mt-2
     h3.p-rel.pt-2.f-stl.f-reg Règlement complet
-    p.pt-1.f-grey On sectetuer adipiscing elit ! Sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam. <br><br>Tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. incidunt ut laoreet dolore magna aliquam erat volutpat uam erat volutp  atuam erat volutpat.On sectetuer adipiscing elit ! Sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam. Tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. incidunt ut laoreet dolore magna aliquam erat volutpat uam erat volutp  atuam erat volutpat ...On sectetuer adiUt wisi enim ad minim veniam tion ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. incidunt ut laoreet dolore magna aliquam erat volutpat uam erat volutp  atuam erat volutpat ...inim veniam <br><br>Tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. incidunt ut laoreet dolore magna aliquam erat volutpat uam erat volutp  atuam erat volutpat llamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. incidunt ut laoreet dolore magna aliquam erat volutpat uam erat volutp  atuam erat volutpat ....
+    p(v-html="rules").pt-1.f-grey 
 
   .f-center.f-bold
     | ...
