--- a/src/assets/style/pages/contest.less
+++ b/src/assets/style/pages/contest.less
@@ -10,7 +10,7 @@
 	z-index: -1;
 }
 
-.o-participation + label {
+.o-participation__label{
   display: inline-block;
   cursor: pointer;
   &:extend(.c-grad-yo);
