--- a/src/components/contest/template.pug
+++ b/src/components/contest/template.pug
@@ -1,52 +1,36 @@
-main.o-main.c-backbg.pb-1
-  .mt-negMain.w-full
-    img(:src="contest.ban").o-contest-img
-  
-  block backlink  
-    a(@click="$router.go(-1)").o-title.o-back.pl-1.mt-1.pt-025.z-5000
-      svg(viewBox="0 0 29.67 25.71").o-svg-btn.va-mid
-        use(xlink:href="#ico-arrow")
-    
-  .o-main__container
+contest-layout(:data="contest")
+  //- block a changer dans validation et info
+  block contestContent
     .pl-2.pr-2  
-      .o-tile__info
-        img(:src="contest.logo" alt="logo").o-tile__logo.b-10.brad-100
-        h2.o-tile__name.p-hcenter-rel.f-cap.f-st {{ contest.brand }}
-        h3.o-tile__desc.p-hcenter-rel.f-grey.f-cap.f-light.f-stl {{ contest.desc }}
-      
-    //- block a changer dans validation et info
-    block contestContent
-      .pl-2.pr-2  
-        p.p-rel.mt-3.f-center.pl-05.pr-05.sep-bef.sep-aft.f-stl {{ contest.infos }}
-
-      .pl-1.pr-1.pt-2
-        ul.d-row-flex.no-list.b-reg.brad-6.pt-1.pb-1
-          li.p-hcenter-rel.d-flex-eq.f-light.f-si 
-            svg(viewBox="0 0 62.37 62.37").o-tile__ico.o-tile__ico--large
-              use(xlink:href="#ico-cible")
-            span {{ contest.target }}
-          li.p-hcenter-rel.d-flex-eq.pr-1.pl-1.f-light.f-si 
-            svg(viewBox="0 0 64.22 62.67").o-tile__ico.o-tile__ico--large
-              use(xlink:href="#ico-gift")
-            span {{ contest.gifts }}
+      p.p-rel.mt-3.f-center.pl-05.pr-05.sep-bef.sep-aft.f-stl {{ contest.infos }}
+    .pl-1.pr-1.pt-2
+      ul.d-row-flex.no-list.b-reg.brad-6.pt-1.pb-1
+        li.p-hcenter-rel.d-flex-eq.f-light.f-si 
+          svg(viewBox="0 0 62.37 62.37").o-tile__ico.o-tile__ico--large
+            use(xlink:href="#ico-cible")
+          span {{ contest.target }}
+        li.p-hcenter-rel.d-flex-eq.pr-1.pl-1.f-light.f-si 
+          svg(viewBox="0 0 64.22 62.67").o-tile__ico.o-tile__ico--large
+            use(xlink:href="#ico-gift")
+          span {{ contest.gifts }}
               
-          li.p-hcenter-rel.d-flex-eq.f-light.f-si 
-            svg(viewBox="0 0 60.09 60.09" ).o-tile__ico.o-tile__ico--large
-              use(xlink:href="#ico-clock")
-            div
-              div {{ getStartDate }}
-              div {{ getEndDate }}
+        li.p-hcenter-rel.d-flex-eq.f-light.f-si 
+          svg(viewBox="0 0 60.09 60.09" ).o-tile__ico.o-tile__ico--large
+            use(xlink:href="#ico-clock")
+          div
+            div {{ getStartDate }}
+            div {{ getEndDate }}
             
-      div.d-col-flex.mt-2.pr-4.pl-4
-        a(@click="displayPopin = true" v-if="!contest.participation").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Participer
-        a(href="/vote.html").no-link.f-center.shadbox-light.pt-1.pb-1.mt-1.brad-4 
-          svg(viewBox="0 0 42 42").mt-neg025.o-svgh-ico.o-svg-btn.mr-05.va-mid
-            use(xlink:href="#ico-vote")
-          span Voter
-        
-      div.pl-4.pr-4.mt-4
-        h3.p-rel.sep-bef.f-stl.f-reg Règlement complet
-        p(v-html="contest.rules").pt-1.f-grey.f-stl
+    div.d-col-flex.mt-2.pr-4.pl-4
+      a(@click="displayPopin = true" v-if="!contest.participation").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Participer
+      a(href="/vote.html").no-link.f-center.shadbox-light.pt-1.pb-1.mt-1.brad-4 
+        svg(viewBox="0 0 42 42").mt-neg025.o-svgh-ico.o-svg-btn.mr-05.va-mid
+          use(xlink:href="#ico-vote")
+        span Voter
+      
+    div.pl-4.pr-4.mt-4
+      h3.p-rel.sep-bef.f-stl.f-reg Règlement complet
+      p(v-html="contest.rules").pt-1.f-grey.f-stl
     
   //- popin de reglement ici
   layer-popin(v-show="displayPopin")
