--- a/src/components/contest/template.pug
+++ b/src/components/contest/template.pug
@@ -26,7 +26,7 @@ contest-layout(:data="contest")
       a().no-link.f-center.shadbox-light.pt-1.pb-1.mt-1.brad-4 
         svg(viewBox="0 0 42 42").mt-neg025.o-svgh-ico.o-svg-btn.mr-05.va-mid
           use(xlink:href="#ico-vote")
-        span() Voter
+        span() Photos
       
     div.pl-4.pr-4.mt-4
       h3.p-rel.sep-bef.f-stl.f-reg Règlement complet
