--- a/src/components/contest/upload/template.pug
+++ b/src/components/contest/upload/template.pug
@@ -4,13 +4,11 @@ contest-layout(:data="contest")
     figcaption.o-warning
       span.o-warning__title Attention
       span.o-warning__info En cas de validation, il ne sera plus possible de modifier la photo ou de participer à ce concours avec une autre photo, même en cas de suppression
-  //- case state 
-  //-   when "validation"
-  //-     div.d-col-flex.mt-3.pr-4.pl-4
-  //-       a(href="contest-information.html").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Valider la Participatio
-  //-     a(href="contest.html").no-link.d-block.mt-2.f-right.pr-2.pb-1.f-grey.f-dec-it annuler
-  //- 
-  //-   when "information"
-  //-     div.d-col-flex.mt-3.pr-4.pl-4
-  //-       h2.f-bold.f-sfat.pt-05.pb-05.f-center.f-green Participation validée !
-  //-     a(href="flux.html").no-link.d-block.mt-2.f-right.pr-2.pb-1.f-grey.f-dec-it retour au flux
+
+  div.d-col-flex.mt-3.pr-4.pl-4
+    a(href="contest-information.html").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Valider la Participation
+  a(href="contest.html").no-link.d-block.mt-2.f-right.pr-2.pb-1.f-grey.f-dec-it annuler
+
+  //- div.d-col-flex.mt-3.pr-4.pl-4
+  //-   h2.f-bold.f-sfat.pt-05.pb-05.f-center.f-green Participation validée !
+  //- a(href="flux.html").no-link.d-block.mt-2.f-right.pr-2.pb-1.f-grey.f-dec-it retour au flux
