Lecture image et securisation type img

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -232,6 +232,7 @@
 .pt-4{ margin-top: @space * 4; }
 
 .mt-6{ margin-top: @space * 6; }
+.mt-10{ margin-top: @space * 10; }
 
 // neg
 .mt-neg025{ margin-top: -@space / 4; }
