--- a/src/components/contest/upload/template.pug
+++ b/src/components/contest/upload/template.pug
@@ -1,13 +1,20 @@
 contest-layout(:data="contest")
-  figure.w-100.mt-3.c-forbg.f-center
-    img(src="@/assets/img/profil/dance.jpg").o-plain-img
+  
+  div(v-show="!picUploaded").d-col-flex.mt-10.pr-4.pl-4
+    input(type="file" @change="upload($event)")#participer.o-participation
+    label(for="participer" ).o-participation__label Importer une photo
+   
+  
+  figure(v-show="picUploaded").w-100.mt-3.c-forbg.f-center
+    img(:src="pictureRender").o-plain-img
     figcaption.o-warning
       span.o-warning__title Attention
       span.o-warning__info En cas de validation, il ne sera plus possible de modifier la photo ou de participer à ce concours avec une autre photo, même en cas de suppression
 
-  div.d-col-flex.mt-3.pr-4.pl-4
-    a(href="contest-information.html").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Valider la Participation
-  a(href="contest.html").no-link.d-block.mt-2.f-right.pr-2.pb-1.f-grey.f-dec-it annuler
+  div(v-show="picUploaded").d-col-flex.mt-3.pr-4.pl-4
+    a(@click.prevent="confirmUpload").f-bold.f-sfat.pt-05.pb-05.f-center.c-grad-yo.shadbox-light.brad-4 Valider la Participation
+    
+  a(@click="$router.go(-1)").no-link.d-block.mt-2.f-right.pr-2.pb-1.f-grey.f-dec-it annuler
 
   //- div.d-col-flex.mt-3.pr-4.pl-4
   //-   h2.f-bold.f-sfat.pt-05.pb-05.f-center.f-green Participation validée !
