Changement css pour gestion dégradé après arangement extractcss alphabet

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -46,9 +46,9 @@
 .cf-orange{ fill: @orange !important; }
 .cf-grey{ fill: @grey; }
 .c-grad-yo{
-  background: @grad;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  background-image: @grad;
 }
 .c-backbg{ background: @bg; }
 .c-forbg{ background: @fg; }
