Peuplement de la data pour le composant de vote

--- a/src/assets/style/style.less
+++ b/src/assets/style/style.less
@@ -15,7 +15,7 @@
 // @import "./pages/flux";
 // @import "./pages/profil";
 @import "./pages/contest";
-@import "./pages/vote";
+// @import "./pages/vote";
 
 @import "./utils/atom";
 @import "./utils/modifiers";
