Inscription des index de photo dans la section vote

--- a/src/components/vote/template.pug
+++ b/src/components/vote/template.pug
@@ -15,7 +15,7 @@ main.o-main.pb-1.c-backbg.f-center
       
   .o-width-container.p-rel.d-inblock
     .d-row-flex.d-flex-spacebet.pl-1.pr-1
-      span.f-light n°1
+      span.f-light n°{{ index + 1}}
       a(href="#").no-link
         span.o-more
     img(:src="displayImage").o-plain-img
