Ajout fonction retrait header au scroll

--- a/src/assets/style/utils/modifiers.less
+++ b/src/assets/style/utils/modifiers.less
@@ -11,3 +11,7 @@
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
   cursor: default;
 }
+
+.s--is-transY-100{
+  transform: translate3d(0, -100%, 0);
+}
