Fix pwa config pour webpack

--- a/src/components/user/settings/template.pug
+++ b/src/components/user/settings/template.pug
@@ -1,4 +1,8 @@
 div
+  a(@click="this.$emit('displayPopin', false)").p-abs.ml-1.z-5000
+    svg(viewBox="0 0 29.67 25.71").o-svg-btn.va-mid
+      use(xlink:href="#ico-arrow")
+        
   ul.d-col-flex.d-flex-vm.mt-2.mb-2.no-list
     li.p-1.f-stl.f-reg
       a Deconnexion
