Mise en forme de la liste de settings dans popup

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -205,6 +205,7 @@
 .pr-05{ padding-right: @space / 2; }
 .pl-05{ padding-left: @space / 2; }
 .mr-05{ margin-right: @space / 2; }
+.mt-05{ margin-top: @space / 2; }
 .mb-05{ margin-bottom: @space / 2; }
 
 
