--- a/src/components/user/settings/template.pug
+++ b/src/components/user/settings/template.pug
@@ -1,5 +1,5 @@
 div
-  a(@click="this.$emit('displayPopin', false)").p-abs.ml-1.z-5000
+  a(@click="this.$emit('displayPopin', false)").p-abs.ml-2.mt-05.z-5000
     svg(viewBox="0 0 29.67 25.71").o-svg-btn.va-mid
       use(xlink:href="#ico-arrow")
         
@@ -12,7 +12,7 @@ div
       a Condition d'utilisation
     li.p-1.f-stl.f-reg
       a Mes infos personnelles
-    li.p-1.f-stl.f-reg
+    li.p-1.mt-3.f-stl.f-reg
       a Nous contacter
     
       
