Gestion de rendu titre settings

--- a/src/components/user/settings/template.pug
+++ b/src/components/user/settings/template.pug
@@ -1,48 +1,11 @@
-div
-  a(@click="$emit('displayPopin', false)").p-abs.ml-2.mt-05.z-5000
-    svg(viewBox="0 0 29.67 25.71").o-svg-btn.va-mid
-      use(xlink:href="#ico-arrow")
-        
-  ul.d-col-flex.d-flex-vm.mt-2.mb-2.no-list
-    li.p-1.f-stl.f-reg
-      a Deconnexion
-    li.p-1.f-stl.f-reg
-      a Confidentialité
-    li.p-1.f-stl.f-reg
-      a Condition d'utilisation
-    li.p-1.f-stl.f-reg
-      a Mes infos personnelles
-    li.p-1.mt-3.f-stl.f-reg
-      a Nous contacter
+main.o-main.c-backbg.pl-1.pr-1.pb-1
+  .o-title.mt-1.pt-05
+    a(@click="$router.go(-1)").p-abs
+      svg(viewBox="0 0 29.67 25.71").o-svg-btn.va-mid
+        use(xlink:href="#ico-arrow")
+    span.d-block.w-100.f-bold.f-stl.pt-025.f-center {{ title }}
+    span(v-if="desc").d-block.w-100.pt-025.f-center.f-grey.f-light.f-si {{ desc }}
+
+  .o-setting__content.p-1
+    | {{ settingsContent }}
     
-      
-  
-  
-  
-  //- .o-tile__infos--long.pl-2.pr-2.pt-2.pb-05.sep-aft
-  //-   .p-rel.d-row-flex.d-flex-spacebet.d-flex-vm.w-100.sep-aft
-  //-     .d-row-flex.d-flex-spacebet.d-flex-vm
-  //-       img(src="logo" alt="logo").o-tile__logo--long.b-1.brad-100
-  //-       span.va-mid.pl-1
-  //-         span.d-block.f-stm.f-bold test
-  //-         span.d-block.f-cap.f-stl.f-lgrey.f-reg test 2
-  //- 
-  //- .o-popin-ovrflw.pl-2.pr-2.mt-2
-  //-   h3.p-rel.pt-2.f-stl.f-reg Règlement complet
-  //-   p().pt-1.f-grey  blabla
-  //- 
-  //- .f-center.f-bold
-  //-   | ...
-  //- 
-  //- .pl-2.pr-2.mt-1
-  //-   input(type="checkbox" name="validRules")#validrules.o-checkbox.mr-05
-  //-   label(for="validrules").o-checkbox-label.f-light.f-si J’accepte les conditions d’utilisation
-  //- 
-  //-   div.d-col-flex.mt-2.pr-4.pl-4
-  //-     a(@click.prevent="confirm").o-participation__label Participer
-  //- 
-  //- //- div.d-col-flex.mt-2.pr-4.pl-4
-  //- //-   input(type="file" :disabled="rulesAccepted === false")#participer.o-participation
-  //- //-   label(for="participer" :class="{'s--is-disabled': rulesAccepted === false}").o-participation__label Participer
-  //- 
-  //- a(@click="$emit('update:popin', false)").no-link.d-block.mt-2.f-right.pr-2.pb-1.f-grey.f-dec-it annuler
