Fix routes du settings

--- a/src/components/user/settings-routes/template.pug
+++ b/src/components/user/settings-routes/template.pug
@@ -5,12 +5,12 @@ div
         
   ul.d-col-flex.d-flex-vm.mt-2.mb-2.no-list
     li.p-1.f-stl.f-reg
-      router-link(to="user/settings/deconnection").no-link Deconnexion
+      router-link(to="/user/settings/deconnection").no-link Deconnexion
     li.p-1.f-stl.f-reg
-      router-link(to="user/settings/confidential").no-link Confidentialité
+      router-link(to="/user/settings/confidential").no-link Confidentialité
     li.p-1.f-stl.f-reg
-      router-link(to="user/settings/cgu").no-link Condition d'utilisation
+      router-link(to="/user/settings/cgu").no-link Condition d'utilisation
     li.p-1.f-stl.f-reg
-      router-link(to="user/settings/personal-information").no-link Mes infos personnelles
+      router-link(to="/user/settings/personal-information").no-link Mes infos personnelles
     li.p-1.mt-3.f-stl.f-reg
-      router-link(to="user/settings/contact").no-link Nous contacter
+      router-link(to="/user/settings/contact").no-link Nous contacter
