--- a/src/components/user/settings/template.pug
+++ b/src/components/user/settings/template.pug
@@ -6,10 +6,17 @@ main.o-main.c-backbg.pl-1.pr-1.pb-1
     span.d-block.w-100.f-bold.f-stl.pt-025.f-center {{ title }}
     span(v-if="desc").d-block.w-100.pt-025.f-center.f-grey.f-light.f-si {{ desc }}
 
-  div(v-if="type !== 'contact'").o-setting__content.p-1
+  div(v-if="type !== 'contact'").o-setting__content.mt-1
     | {{ settingsContent }}
     
-  div(v-else).o-setting__content.p-1
-    | blala
+  div(v-else).mt-1
+    .p-rel
+      span.p-abs.p-vcenter-abs.ml-1.f-si.f-bold.cur-none Objet :
+      input(type="text").w-100.brad-4.b-reg.p-1.pl-5
+      
+    textarea(type="text" placeholder="Votre message").o-setting__textarea.w-100.brad-4.b-reg.mt-2.p-1.p-1.b-noresize
+    button.f-bold.f-stl.pt-05.pb-05.pl-2.pr-2.mt-2.f-center.c-grad-yo.shadbox-light.brad-4 envoyer
+      
+    
   
     
