Style border reg

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -102,8 +102,8 @@
 // ----- BORDER -----
 //
 
-.b-reg{ border: solid @l-grey @space / 10; }
-.b-regFg{ border: solid @fg @space / 10; }
+.b-reg{ border: solid @l-grey @border-width; }
+.b-regFg{ border: solid @fg @border-width; }
 
 
 .brad-2{ border-radius: @radius-reg; }
