--- a/src/components/user/settings/template.pug
+++ b/src/components/user/settings/template.pug
@@ -15,7 +15,7 @@ main.o-main.c-backbg.pl-1.pr-1.pb-1
       input(type="text").w-100.brad-4.b-reg.p-1.pl-5.b-nodeco
       
     textarea(type="text" placeholder="Votre message").o-setting__textarea.w-100.brad-4.b-reg.mt-2.p-1.p-1.b-noresize.b-nodeco
-    button.f-bold.f-stl.pt-05.pb-05.pl-2.pr-2.mt-2.f-center.c-grad-yo.shadbox-light.brad-4.b-nodeco envoyer
+    a.d-block.f-bold.f-stl.pt-05.pb-05.pl-2.pr-2.mt-2.f-center.c-grad-yo.shadbox-light.brad-4.b-nodeco envoyer
       
     
   
