Changement de nom deco focus style

--- a/src/assets/style/utils/atom.less
+++ b/src/assets/style/utils/atom.less
@@ -10,6 +10,14 @@
     color: inherit;
   }
 }
+.no-deco{
+  outline: none;
+  box-shadow: none;
+  &:focus{
+    outline: none;
+    box-shadow: none;
+  }
+}
 
 // ----- SEPARATIONS -------
 //
@@ -114,14 +122,6 @@
 .b-1{ border-width: 1px; }
 
 .b-noresize{ resize: none; }
-.b-nodeco{
-  outline: none;
-  box-shadow: none;
-  &:focus{
-    outline: none;
-    box-shadow: none;
-  }
-}
 
 
 // ----- POSITION -----
