Création page d'index

--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -1,1 +1,68 @@
-p BONJOUR !!!
+.i-intro
+  header.i-header
+    .i-header__brand
+      img(srcset="~@/assets/img/hepic@2x.png 2x, ~@/assets/img/hepic@1x.png 1x" src="~@/assets/img/hepic@1x.png").i-header__logo
+      h1.i-main__title Trouvez, Participez, et gagner gratuitement aux concours qui sont faits pour vous
+    button.i-header__ddl télécharger la web application
+    
+  section.i-section
+    .i-section__pane.i-section__pane--ft
+      .i-section__text
+        h2.i-text.i-section__text--min Hepic vous rapproche des Marques et des Organismes que vous aimez, en vous donnant un accès simple et gratuit à leur concours.
+        p.i-subtitle Partagez votre talent, et remportez des prix !
+      .i-discover.i-section__text--min
+        a(href="").i-btn.i-text comment ça marche
+        img(src="")
+          
+    .i-section__pane.i-section__pane--ft.i-bg-skew
+      .i-section__img.i-section__img--isskewed
+        span.i-hottile-text.i-subtitle What’s New
+        img(srcset="@/assets/img/index/hot-tile@2x.png 2x, @/assets/img/index/hot-tile@1x.png 1x" src="@/assets/img/index/hot-tile@1x.png" width="350").i-img__hottile
+        
+    .i-section__social
+      span.i-subtitle Lancez-vous !
+      nav
+        button facebook
+        button facebook
+        button facebook
+        button facebook
+        
+  section.i-section
+    .i-section__pane
+      .i-section__text
+        h2.i-title
+          img(src="")
+          | Trouvez 
+        p.i-subtitle facilement grâce au flux et à la barre de recherchers tous les types de concours qui vous interessent
+              
+    .i-section__pane
+      img(srcset="@/assets/img/index/page2@2x.png 2x, @/assets/img/index/page2@1x.png 1x" src="@/assets/img/index/page2@1x.png" width="500") 
+       
+  section.i-section
+    .i-section__pane 
+      img(srcset="@/assets/img/index/page3@2x.png 2x, @/assets/img/index/page3@1x.png 1x" src="@/assets/img/index/page3@1x.png" width="500")
+        
+    .i-section__pane
+      .i-section__text
+        h2.i-title
+          img(src="")
+          | Votez & Participez  
+        p.i-subtitle gratuitement aux concours qui vous plaisent en quelques clics, sur tous vos appareils
+      
+  section.i-section
+    .i-section__pane
+      .i-section__text
+        h2.i-title
+          img(src="")
+          | Gagnez  
+        p.i-subtitle des prix spéciaux et donnez de la visibilité à votre talent
+    .i-section__pane.i-section__pane--bot
+      img(srcset="@/assets/img/index/page4@2x.png 2x, @/assets/img/index/page4@1x.png 1x" src="@/assets/img/index/page4@1x.png" width="700")
+
+  footer.i-footer
+    a(href="#").i-footer__link Mentions Légales
+    a(href="#").i-footer__link Conditions Générales d’Utilisation
+    a(href="#").i-footer__link Confidentialité
+    a(href="#").i-footer__link Données Personnelles
+  
+  
