--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -12,7 +12,8 @@
         p.i-subtitle Partagez votre talent, et remportez des prix !
       .i-discover.i-section__text--min
         a(href="").i-btn.i-text comment ça marche
-        img(src="")
+        svg(viewBox="0 0 64.22 62.67").i-icon--arrow
+          use(xlink:href="#ico-arrow")
           
     .i-section__pane.i-section__pane--ft.i-bg-skew
       .i-section__img.i-section__img--isskewed
@@ -31,9 +32,10 @@
     .i-section__pane
       .i-section__text
         h2.i-title
-          img(src="")
+          svg(viewBox="0 0 64.22 62.67").i-icon
+            use(xlink:href="#ico-cible")
           | Trouvez 
-        p.i-subtitle facilement grâce au flux et à la barre de recherchers tous les types de concours qui vous interessent
+        p.i-subtitle.i-subtitle--under facilement grâce au flux et à la barre de recherchers tous les types de concours qui vous interessent
               
     .i-section__pane
       img(srcset="@/assets/img/index/page2@2x.png 2x, @/assets/img/index/page2@1x.png 1x" src="@/assets/img/index/page2@1x.png" width="500") 
@@ -43,19 +45,21 @@
       img(srcset="@/assets/img/index/page3@2x.png 2x, @/assets/img/index/page3@1x.png 1x" src="@/assets/img/index/page3@1x.png" width="500")
         
     .i-section__pane
-      .i-section__text
+      .i-section__text--vote
         h2.i-title
-          img(src="")
+          svg(viewBox="0 0 64.22 62.67").i-icon.i-icon--vote
+            use(xlink:href="#ico-vote")
           | Votez & Participez  
-        p.i-subtitle gratuitement aux concours qui vous plaisent en quelques clics, sur tous vos appareils
+        p.i-subtitle.i-subtitle--under gratuitement aux concours qui vous plaisent en quelques clics, sur tous vos appareils
       
   section.i-section
     .i-section__pane
-      .i-section__text
+      .i-section__text--gift
         h2.i-title
-          img(src="")
+          svg(viewBox="0 0 64.22 62.67").i-icon
+            use(xlink:href="#ico-gift")
           | Gagnez  
-        p.i-subtitle des prix spéciaux et donnez de la visibilité à votre talent
+        p.i-subtitle.i-subtitle--under des prix spéciaux et donnez de la visibilité à votre talent
     .i-section__pane.i-section__pane--bot
       img(srcset="@/assets/img/index/page4@2x.png 2x, @/assets/img/index/page4@1x.png 1x" src="@/assets/img/index/page4@1x.png" width="700")
 
