Social et bouton page index

--- a/src/assets/style/style.less
+++ b/src/assets/style/style.less
@@ -11,7 +11,7 @@
 @import "./components/popin";
 
 // page
-@import "./pages/connect";
+// @import "./pages/connect";
 // @import "./pages/flux";
 // @import "./pages/profil";
 @import "./pages/contest";
