--- a/src/components/index/template.pug
+++ b/src/components/index/template.pug
@@ -22,11 +22,11 @@
         
     .i-section__social
       span.i-subtitle Lancez-vous !
-      nav
-        button facebook
-        button facebook
-        button facebook
-        button facebook
+      nav.i-section__social__nav
+        button.o-connect-btn.o-connect-btn--fb.brad-2.f-white.f-reg.f-center  Log in with Facebook
+        button.o-connect-btn.o-connect-btn--tw.brad-2.f-white.f-reg.f-center Log in with Twitter
+        button.o-connect-btn.o-connect-btn--gml.brad-2.f-white.f-reg.f-center Log in with Gmail
+        button.o-connect-btn.o-connect-btn--inst.brad-2.f-white.f-reg.f-center Log in with Instagram
         
   section.i-section
     .i-section__pane
@@ -35,7 +35,7 @@
           svg(viewBox="0 0 64.22 62.67").i-icon
             use(xlink:href="#ico-cible")
           | Trouvez 
-        p.i-subtitle.i-subtitle--under facilement grâce au flux et à la barre de recherchers tous les types de concours qui vous interessent
+        p.i-subtitle.i-subtitle--underfacilement grâce au flux et à la barre de recherchers tous les types de concours qui vous interessent
               
     .i-section__pane
       img(srcset="@/assets/img/index/page2@2x.png 2x, @/assets/img/index/page2@1x.png 1x" src="@/assets/img/index/page2@1x.png" width="500") 
